# pypyz

./: .gitignore  README.md  pyproject.toml
data/web_resources/: pvz_media_resources_precise.json
docs/: mod_spec.md
mods/pvz.base/: mod.json
pvz/: __init__.py  __main__.py  errors.py  game.py  models.py  semver.py
pvz/assets/: __init__.py  registry.py
pvz/combat/: __init__.py  sim.py
pvz/content/: __init__.py  asset_validation.py  dependency.py  loader.py  localization_validation.py  manifest.py  patcher.py  schema_validator.py
pvz/modes/: __init__.py  almanac.py  campaign.py  shop.py  zen.py
pvz/save/: __init__.py  store.py
pvz/scripting/: __init__.py  manager.py  (+1 more)
schemas/: README.md  achievement.schema.json  almanac_entry.schema.json  animation_config.schema.json  audio_event.schema.json  economy.schema.json  level.schema.json  manifest.schema.json  map_node.schema.json  media_resource.schema.json  minigame.schema.json  plant.schema.json  projectile.schema.json  puzzle_level.schema.json  shop_item.schema.json  status_effect.schema.json  survival_level.schema.json  ui_screen.schema.json  unlock_rule.schema.json  wave.schema.json  zen_item.schema.json  zombie.schema.json
tests/: test_asset_and_i18n_validation.py  test_dependency_and_patches.py  test_level_alignment.py  test_loader.py  test_save.py  test_scripting.py
tools/: __init__.py  apply_level_alignment.py  compare_pvz1_content.py  dump_registry.py  gather_pvz_level_alignment.py  gather_pvz_media_precise.py  gather_pvz_media_resources.py  lint_patches.py  resolve_load_order.py  validate_mod.py
(+686 files in other folders)
